# reportBot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  apiDoc.md  deploy.md  docker-compose.yml  package-lock.json  pyproject.toml
backend/: Dockerfile  docker-compose.yml  package-lock.json  package.json  pyproject.toml
backend/app/: main.py
backend/app/alembic/versions/: 0a16d49fa6a6_report_on_goods.py  1045ba78a5a3_writeoff.py  29cc1cba8814_report_on_goods.py  3f777aabecac_app_2_column_writeoff.py  681e2191fa90_add_table_report_on_goods.py  7b8672c59c23_add_inventory_management_tables.py  80b82db785fe_app_column_comments.py  85e3e1c3398c_add_yandex_food_no_system_and_primehill_.py  89e0cb209a17_add_table_daily_inventory.py  91a37f3e1550_add_optional_date_time_to_writeoff_.py  (+6 more)
backend/app/api/: __init__.py  daily_inventories.py  daily_inventory_v2.py  inventory_management.py  report_on_goods.py  shift_reports.py  telegram_webhook.py  writeoff_transfer.py
backend/app/core/: __init__.py  config.py  constants.py
backend/app/crud/: __init__.py  daily_inventory.py  daily_inventory_v2.py  inventory_item.py  report_on_good.py  shift_report.py  writeoff_transfer.py
backend/app/models/: __init__.py  daily_inventory.py  daily_inventory_v2.py  inventory_item.py  report_on_goods.py  shift_report.py  writeoff_transfer.py
backend/app/schemas/: __init__.py  daily_inventory.py  daily_inventory_v2.py  inventory_item.py  report_on_goods.py  shift_report.py  telegram.py  writeoff_transfer.py
backend/app/services/: report_calculator.py  telegram_service.py
(+63 files in other folders)
